2022-02-17  Fujii Hironori  <Hironori.Fujii@sony.com>

        GeneratePreferences.rb: warning: Passing safe_level with the 2nd argument of ERB.new is deprecated
        https://bugs.webkit.org/show_bug.cgi?id=236684

        Reviewed by Yusuke Suzuki.

        With Ruby 3.1.0, GeneratePreferences.rb reported the following warnings.
        > GeneratePreferences.rb:235: warning: Passing safe_level with the 2nd argument of ERB.new is deprecated. Do not use it, and specify other arguments as keyword arguments.
        > GeneratePreferences.rb:235: warning: Passing trim_mode with the 3rd argument of ERB.new is deprecated. Use keyword argument like ERB.new(str, trim_mode: ...) instead.

        * Scripts/GeneratePreferences.rb: Changed to use the keyword argument for ERB.new.

2022-02-17  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r289974.
        https://bugs.webkit.org/show_bug.cgi?id=236804

        Should not have been reverted on trunk

        Reverted changeset:

        "Unreviewed, reverting r286874."
        https://bugs.webkit.org/show_bug.cgi?id=236734
        https://commits.webkit.org/r289974

2022-02-17  Jer Noble  <jer.noble@apple.com>

        [Cocoa] Make AVFoundationSPI.h robust against changes in system headers
        https://bugs.webkit.org/show_bug.cgi?id=236787

        Reviewed by Eric Carlson.

        * wtf/PlatformHave.h:

2022-02-17  Nikolaos Mouchtaris  <nmouchtaris@apple.com>

        Enable CSS Motion Path by default
        https://bugs.webkit.org/show_bug.cgi?id=236681

        Unreviewed enable of WebKitLegacy.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2022-02-17  Nikolaos Mouchtaris  <nmouchtaris@apple.com>

        [Web Animations] Enable Composite Animations
        https://bugs.webkit.org/show_bug.cgi?id=236682

        Reviewed by Dean Jackson.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2022-02-17  Nikolaos Mouchtaris  <nmouchtaris@apple.com>
