@@ -1355,11 +1355,11 @@ SubgridEnabled:
   humanReadableDescription: "Enable CSS subgrid support"
   defaultValue:
     WebKitLegacy:
-      default: false
+      default: true
     WebKit:
-      default: false
+      default: true
     WebCore:
-      default: false
+      default: true
 
 SyntheticEditingCommandsEnabled:
   type: bool
